# Fard-Dinar

./: .gitignore  Cargo.toml  README.md  state_1.json  state_2.json  tmp_state.json
crates/fd-cli/: Cargo.toml
crates/fd-cli/src/: main.rs
crates/fd-client/: Cargo.toml
crates/fd-client/examples/: client_demo.rs
crates/fd-client/src/: lib.rs
crates/fd-core/: Cargo.toml
crates/fd-core/src/: canon.rs  crypto.rs  engine.rs  errors.rs  hashes.rs  lib.rs  receipt.rs  store.rs  types.rs  verify.rs
crates/fd-core/tests/: fd_spec.rs
crates/fd-vendor/: Cargo.toml
crates/fd-vendor/src/: main.rs
crates/fd-wallet/: Cargo.toml
crates/fd-wallet/src/: main.rs
docs/: FD_CORE_SPEC_v1.0.0.md  FD_NETWORK_SPEC_v1.0.0.md  FD_NETWORK_SPEC_v1.0.md  network_topologies.md
examples/: deposit_alice.json  deposit_bob.json  dev-fixtures.json  events.json  genesis.json  genesis_rewards.json  pre_state_empty.json  pre_state_genesis.json  transfer_alice_candidate_a.json  transfer_alice_candidate_b.json  transfer_bob.json
examples/network/: README.md  SMOKE_TEST.md  http_a.sh  http_b.sh  node_a.sh  node_b.sh  registry_a.sh  registry_b.sh
examples/network/fard/: mesh.sh  mesh_convergence_test.sh  single_node.sh  smoke_test.sh  topology_mesh.json  topology_single.json  topology_two_registry.json  two_registry.sh
examples/receipts/: deposit_alice.json  deposit_bob.json  transfer_alice.json  transfer_bob.json
fard/lib/: args.fard  canon.fard  crypto.fard  engine.fard  hashes.fard  receipt.fard  store.fard
fard/tests/: test_engine.fard  test_foundation.fard
scripts/: package_zip.sh
