[workspace]
members = ["crates/fd-core", "crates/fd-cli", "crates/fd-client"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.0.0"
authors = ["OpenAI"]
repository = "https://example.invalid/fard-dinar"
description = "Deterministic monetary engine for Fard Dinar"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ahd_1024 = { path = "/Users/g.bogans/Downloads/AHD_1024" }
thiserror = "2.0.17"
walkdir = "2.5.0"
ureq = { version = "2.10.1", features = ["json"] }
tiny_http = "0.12.0"
