[package]
name = "fd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
ahd_1024.workspace = true
thiserror.workspace = true
walkdir.workspace = true
